--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,12 @@
   "require": {
     "php": "^7",
     "zendframework/zendframework": "~3.0",
+    "zendframework/zend-test": "~3.0",
     "iteaoffice/contact": "dev-develop",
     "zf-commons/zfc-user": "2.x-dev",
     "jield-webdev/bjy-authorize": "dev-master",
     "roave/security-advisories": "dev-master",
-    "phpunit/phpunit": "^6.0",
-    "phpunit/php-code-coverage": "^5.0",
-    "zendframework/zend-test": "^3.0"
+    "phpunit/php-code-coverage": "^5.0"
   },
   "autoload": {
     "psr-4": {
