Update of the composer for depedencies and small change in the config file loader

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "license": "proprietary",
   "description": "General code for testing",
   "keywords": [
-    "project"
+    "test"
   ],
   "homepage": "https://itea3.org",
   "support": {
@@ -18,13 +18,19 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": "^7",
+    "php": "^7.1",
     "zendframework/zend-test": "~3.0",
+    "doctrine/doctrine-orm-module": "~1.1",
     "iteaoffice/contact": "dev-develop",
+    "iteaoffice/general": "dev-develop",
+    "iteaoffice/program": "dev-develop",
+    "iteaoffice/affiliation": "dev-develop",
+    "iteaoffice/project": "dev-develop",
+    "iteaoffice/event": "dev-develop",
+    "iteaoffice/invoice": "dev-develop",
     "zf-commons/zfc-user": "2.x-dev",
     "jield-webdev/bjy-authorize": "dev-master",
-    "roave/security-advisories": "dev-master",
-    "phpunit/php-code-coverage": "^5.0"
+    "roave/security-advisories": "dev-master"
   },
   "autoload": {
     "psr-4": {
