--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
     "php": "^7.1",
     "zendframework/zend-test": "~3.0",
     "doctrine/doctrine-orm-module": "~1.1",
-    "phpunit/php-code-coverage": "^4.0.4",
     "zf-commons/zfc-user": "2.x-dev",
     "jield-webdev/bjy-authorize": "dev-master",
     "roave/security-advisories": "dev-master"
@@ -33,8 +32,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0-dev",
-      "dev-develop": "1.1-dev"
+      "dev-master": "1.0.x-dev",
+      "dev-develop": "1.1.x-dev"
     }
   }
 }
