--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "phploc/phploc": "@stable",
     "doctrine/data-fixtures": "@stable",
     "jakub-onderka/php-parallel-lint": "@stable",
-    "jakub-onderka/php-console-highlighter": "@stable"
+    "jakub-onderka/php-console-highlighter": "@stable",
     "jield-webdev/bjy-authorize": "dev-master",
     "roave/security-advisories": "dev-master"
   },
