--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
     "jakub-onderka/php-parallel-lint": "@stable",
     "jakub-onderka/php-console-highlighter": "@stable",
     "jield-webdev/bjy-authorize": "dev-master",
-    "roave/security-advisories": "dev-master",
-    "phpunit/php-file-iterator":"^1.4.2"
+    "roave/security-advisories": "dev-master"
   },
   "autoload": {
     "psr-4": {
