Composer.json update

--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
   "minimum-stability": "dev",
   "require": {
     "php": "^7.1",
-    "zendframework/zend-test": "~3.1",
-    "doctrine/doctrine-orm-module": "~1.1",
-    "zf-commons/zfc-user": "2.x-dev",
+    "zendframework/zend-test": "@stable",
+    "doctrine/doctrine-orm-module": "@stable",
+    "zf-commons/zfc-user": "@stable",
     "pdepend/pdepend": "@stable",
     "friendsofphp/php-cs-fixer": "@stable",
     "squizlabs/php_codesniffer": "@stable",
