--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
     "doctrine/data-fixtures": "@stable",
     "jakub-onderka/php-parallel-lint": "@stable",
     "jakub-onderka/php-console-highlighter": "@stable",
-    "jield-webdev/bjy-authorize": "^1.5.1",
-    "roave/security-advisories": "dev-master"
+    "jield-webdev/bjy-authorize": "^1.5.1"
   },
   "autoload": {
     "psr-4": {
