--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
   "require": {
     "php": "^7.1",
     "zendframework/zend-test": "3.1.*",
+    "sebastian/version": "^2.0",
     "doctrine/doctrine-orm-module": "^1.1.5",
     "zf-commons/zfc-user": "^3.0.0",
     "pdepend/pdepend": "@stable",
