--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
   "require": {
     "php": "^7.1",
     "doctrine/doctrine-orm-module": "^1.1.5",
+    "sebastian/version": "2.0.*",
     "zf-commons/zfc-user": "^3.0.0",
     "pdepend/pdepend": "@stable",
     "friendsofphp/php-cs-fixer": "@stable",
