--- a/composer.json
+++ b/composer.json
@@ -19,17 +19,14 @@
   "minimum-stability": "dev",
   "require": {
     "php": "^7.1",
-    "doctrine/doctrine-orm-module": "^1.1.5",
-    "sebastian/version": "2.0.*",
-    "zf-commons/zfc-user": "^3.0.0",
+    "phpunit/phpunit": "@stable",
     "pdepend/pdepend": "@stable",
     "friendsofphp/php-cs-fixer": "@stable",
     "squizlabs/php_codesniffer": "@stable",
     "phploc/phploc": "@stable",
     "doctrine/data-fixtures": "@stable",
     "jakub-onderka/php-parallel-lint": "@stable",
-    "jakub-onderka/php-console-highlighter": "@stable",
-    "jield-webdev/bjy-authorize": "^1.5.1"
+    "jakub-onderka/php-console-highlighter": "@stable"
   },
   "autoload": {
     "psr-4": {
