--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
   "extra": {
     "branch-alias": {
       "dev-master": "1.1.x-dev",
-      "dev-develop": "1.2.x-dev"
+      "dev-solodb": "1.1.x-dev"
     }
   }
 }
