--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "phploc/phploc": "@stable",
     "doctrine/data-fixtures": "@stable",
     "jakub-onderka/php-parallel-lint": "@stable",
-    "jakub-onderka/php-console-highlighter": "@stable"
+    "jakub-onderka/php-console-highlighter": "@stable",
+    "phpstan/phpstan": "0.10.*"
   },
   "autoload": {
     "psr-4": {
