--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,10 @@
   "require": {
     "php": "^7.1",
     "zendframework/zend-test": "^3.2.0",
+    "zendframework/zend-mvc": "^3.0.1",
+    "zendframework/zend-mvc-console": "^1.2.0",
+    "zendframework/zend-mvc-plugins": "^1.0.1",
+    "zendframework/zend-navigation": "^2.9.0",
     "pdepend/pdepend": "@stable",
     "friendsofphp/php-cs-fixer": "@stable",
     "squizlabs/php_codesniffer": "@stable",
