--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
     "zendframework/zend-navigation": "^2.9.0",
     "pdepend/pdepend": "@stable",
     "friendsofphp/php-cs-fixer": "@stable",
-    "squizlabs/php_codesniffer": "@stable",
+    "squizlabs/php_codesniffer": "3.4.*",
     "phploc/phploc": "@stable",
     "doctrine/data-fixtures": "@stable",
     "jakub-onderka/php-parallel-lint": "@stable",
     "jakub-onderka/php-console-highlighter": "@stable",
-    "phpstan/phpstan": "0.10.*"
+    "phpstan/phpstan": "0.11.*"
   },
   "autoload": {
     "psr-4": {
