--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
       "@cbf",
       "@cs-fix"
     ],
-    "php-lint": "./vendor/bin/parallel-lint module",
+    "php-lint": "./vendor/bin/parallel-lint src",
     "cs": "./vendor/bin/phpcs -n -p --standard=PSR2 --extensions=php,twig src",
     "cbf": "./vendor/bin/phpcbf src --standard=PSR2",
     "cs-fix": "./vendor/bin/php-cs-fixer fix -v src"
