--- a/composer.json
+++ b/composer.json
@@ -53,8 +53,8 @@
       "@cs-fix"
     ],
     "php-lint": "./vendor/bin/parallel-lint src",
-    "cs": "./vendor/bin/phpcs -n -p --standard=PSR2 --extensions=php,twig src",
-    "cbf": "./vendor/bin/phpcbf src --standard=PSR2",
+    "cs": "./vendor/bin/phpcs -n -p --standard=PSR12 --extensions=php,twig src",
+    "cbf": "./vendor/bin/phpcbf src --standard=PSR12 --extensions=php,twig",
     "cs-fix": "./vendor/bin/php-cs-fixer fix -v src"
   }
 }
