--- a/composer.json
+++ b/composer.json
@@ -1,60 +1,61 @@
 {
-  "name": "iteaoffice/testing",
-  "type": "library",
-  "license": "proprietary",
-  "description": "General code for testing",
-  "keywords": [
-    "test"
-  ],
-  "homepage": "https://itea3.org",
-  "support": {
-    "email": "ticket@itea3.org"
-  },
-  "authors": [
-    {
-      "name": "Johan van der Heide",
-      "email": "johan.van.der.heide@itea3.org"
-    }
-  ],
-  "minimum-stability": "dev",
-  "require": {
-    "php": "~7.2 || ~7.3 || ~7.4",
-    "zendframework/zend-test": "3.3.*",
-    "zendframework/zend-mvc": "^3.0.1",
-    "zendframework/zend-mvc-console": "^1.2.0",
-    "zendframework/zend-mvc-plugins": "^1.0.1",
-    "zendframework/zend-navigation": "^2.9.0",
-    "pdepend/pdepend": "@stable",
-    "friendsofphp/php-cs-fixer": "@stable",
-    "squizlabs/php_codesniffer": "3.4.*",
-    "phploc/phploc": "@stable",
-    "doctrine/data-fixtures": "@stable",
-    "jakub-onderka/php-parallel-lint": "@stable",
-    "jakub-onderka/php-console-highlighter": "@stable",
-    "phpstan/phpstan": "0.12.*"
-  },
-  "autoload": {
-    "psr-4": {
-      "Testing\\": "src/"
-    }
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "1.2.x-dev"
-    }
-  },
-  "scripts": {
-    "check": [
-      "@php-lint",
-      "@cs"
+    "name": "iteaoffice/testing",
+    "type": "library",
+    "license": "proprietary",
+    "description": "General code for testing",
+    "keywords": [
+        "test"
     ],
-    "fix": [
-      "@cbf",
-      "@cs-fix"
+    "homepage": "https://itea3.org",
+    "support": {
+        "email": "ticket@itea3.org"
+    },
+    "authors": [
+        {
+            "name": "Johan van der Heide",
+            "email": "johan.van.der.heide@itea3.org"
+        }
     ],
-    "php-lint": "./vendor/bin/parallel-lint src",
-    "cs": "./vendor/bin/phpcs -n -p --standard=PSR12 --extensions=php,twig src",
-    "cbf": "./vendor/bin/phpcbf src --standard=PSR12 --extensions=php,twig",
-    "cs-fix": "./vendor/bin/php-cs-fixer fix -v src"
-  }
+    "minimum-stability": "dev",
+    "require": {
+        "php": "~7.2 || ~7.3 || ~7.4",
+        "laminas/laminas-test": "3.3.*",
+        "laminas/laminas-mvc": "^3.0.1",
+        "laminas/laminas-mvc-console": "^1.2.0",
+        "laminas/laminas-mvc-plugins": "^1.0.1",
+        "laminas/laminas-navigation": "^2.9.0",
+        "pdepend/pdepend": "@stable",
+        "friendsofphp/php-cs-fixer": "@stable",
+        "squizlabs/php_codesniffer": "3.4.*",
+        "phploc/phploc": "@stable",
+        "doctrine/data-fixtures": "@stable",
+        "jakub-onderka/php-parallel-lint": "@stable",
+        "jakub-onderka/php-console-highlighter": "@stable",
+        "phpstan/phpstan": "0.12.*",
+        "laminas/laminas-dependency-plugin": "^0.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Testing\\": "src/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.2.x-dev"
+        }
+    },
+    "scripts": {
+        "check": [
+            "@php-lint",
+            "@cs"
+        ],
+        "fix": [
+            "@cbf",
+            "@cs-fix"
+        ],
+        "php-lint": "./vendor/bin/parallel-lint src",
+        "cs": "./vendor/bin/phpcs -n -p --standard=PSR12 --extensions=php,twig src",
+        "cbf": "./vendor/bin/phpcbf src --standard=PSR12 --extensions=php,twig",
+        "cs-fix": "./vendor/bin/php-cs-fixer fix -v src"
+    }
 }
