--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "2.0-DEV",
-      "dev-develop": "2.1-DEV"
+      "dev-master": "2.0-dev",
+      "dev-develop": "2.1-dev"
     }
   },
   "scripts": {
