--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "laminas/laminas-navigation": "^2.9.0",
     "pdepend/pdepend": "@stable",
     "friendsofphp/php-cs-fixer": "@stable",
-    "squizlabs/php_codesniffer": "3.5.*",
+    "squizlabs/php_codesniffer": "3.^5.1",
     "phploc/phploc": "@stable",
     "doctrine/data-fixtures": "@stable",
     "jakub-onderka/php-parallel-lint": "@stable",
