Batch drive composer update

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "doctrine/data-fixtures": "@stable",
     "php-parallel-lint/php-parallel-lint": "@stable",
     "php-parallel-lint/php-console-highlighter": "@stable",
-    "phpstan/phpstan": "0.12.*"
+    "phpstan/phpstan": "0.12.*",
+    "phpunit/phpunit": "^9.2.6"
   },
   "autoload": {
     "psr-4": {
