--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "php-parallel-lint/php-parallel-lint": "@stable",
     "php-parallel-lint/php-console-highlighter": "@stable",
     "phpstan/phpstan": "0.12.*",
-    "phpunit/phpunit": "^9.2.6"
+    "phpunit/phpunit": "^8 || ^9"
   },
   "autoload": {
     "psr-4": {
