--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": "~7.2 || ~7.3 || ~7.4",
-    "laminas/laminas-test": "3.3.* || 3.4.*",
-    "laminas/laminas-mvc": "^3.1",
+    "php": "^7.4 || ^8.0",
+    "laminas/laminas-test": "3.4.*",
+    "laminas/laminas-mvc": "^3.2",
     "laminas/laminas-mvc-console": "^1.2.0",
-    "laminas/laminas-mvc-plugins": "^1.0.1",
-    "laminas/laminas-navigation": "^2.9.0",
+    "laminas/laminas-mvc-plugins": "^1.1",
+    "laminas/laminas-navigation": "^2.11",
     "pdepend/pdepend": "@stable",
     "friendsofphp/php-cs-fixer": "@stable",
     "squizlabs/php_codesniffer": "^3.5.3",
@@ -32,7 +32,7 @@
     "php-parallel-lint/php-parallel-lint": "@stable",
     "php-parallel-lint/php-console-highlighter": "@stable",
     "phpstan/phpstan": "0.12.*",
-    "phpunit/phpunit": "^8 || ^9"
+    "phpunit/phpunit": "^9"
   },
   "autoload": {
     "psr-4": {
