--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "php": "^7.4 || ^8.0",
     "laminas/laminas-test": "3.4.*",
     "laminas/laminas-mvc": "^3.2",
-    "laminas/laminas-mvc-console": "^1.3",
+    "laminas/laminas-cli": "^1.0",
     "laminas/laminas-mvc-plugins": "^1.1",
     "laminas/laminas-navigation": "^2.11",
     "pdepend/pdepend": "@stable",
