--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
   "minimum-stability": "dev",
   "require": {
     "php": "^7.4 || ^8.0",
-    "laminas/laminas-test": "3.4.*",
-    "laminas/laminas-mvc": "^3.2",
-    "laminas/laminas-cli": "^1.0",
-    "laminas/laminas-mvc-plugins": "^1.1",
-    "laminas/laminas-navigation": "^2.11",
+    "laminas/laminas-test": "^3.5",
+    "laminas/laminas-mvc": "^4.0",
+    "laminas/laminas-cli": "^1.2",
+    "laminas/laminas-mvc-plugins": "^1.2",
+    "laminas/laminas-navigation": "^2.12",
     "pdepend/pdepend": "@stable",
     "friendsofphp/php-cs-fixer": "@stable",
-    "squizlabs/php_codesniffer": "^3.5",
+    "squizlabs/php_codesniffer": "^3.6",
     "phploc/phploc": "@stable",
     "doctrine/data-fixtures": "@stable",
     "php-parallel-lint/php-parallel-lint": "@stable",
