--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
   "keywords": [
     "test"
   ],
-  "homepage": "https://itea3.org",
+  "homepage": "https://itea4.org",
   "support": {
-    "email": "ticket@itea3.org"
+    "email": "ticket@itea4.org"
   },
   "authors": [
     {
@@ -24,10 +24,9 @@
     "friendsofphp/php-cs-fixer": "@stable",
     "squizlabs/php_codesniffer": "^3.6",
     "phploc/phploc": "@stable",
-    "doctrine/data-fixtures": "@stable",
     "php-parallel-lint/php-parallel-lint": "@stable",
     "php-parallel-lint/php-console-highlighter": "@stable",
-    "phpstan/phpstan": "0.12.*",
+    "phpstan/phpstan": "^1.2.0",
     "phpunit/phpunit": "^9"
   },
   "autoload": {
