--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "iteaoffice/testing",
   "type": "library",
-  "license": "proprietary",
+  "license": "MIT",
   "description": "General code for testing",
   "keywords": [
     "test"
@@ -18,14 +18,14 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": "^8.0 | 8.1",
     "laminas/laminas-test": "^4.0",
-    "pdepend/pdepend": "@stable",
-    "friendsofphp/php-cs-fixer": "@stable",
+    "pdepend/pdepend": "^2.10",
+    "friendsofphp/php-cs-fixer": "^3.3",
     "squizlabs/php_codesniffer": "^3.6",
-    "phploc/phploc": "@stable",
-    "php-parallel-lint/php-parallel-lint": "@stable",
-    "php-parallel-lint/php-console-highlighter": "@stable",
+    "phploc/phploc": "^7.0",
+    "php-parallel-lint/php-parallel-lint": "^1.3",
+    "php-parallel-lint/php-console-highlighter": "^0.5",
     "phpstan/phpstan": "^1.2.0",
     "phpunit/phpunit": "^9"
   },
@@ -52,8 +52,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "2.0-dev",
-      "dev-develop": "2.1-dev"
+      "dev-master": "3.0-dev",
+      "dev-develop": "3.1-dev"
     }
   },
   "scripts": {
