--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": "^8.0 | 8.1",
+    "php": "^8.0 || ^8.1",
     "laminas/laminas-test": "^4.0",
     "pdepend/pdepend": "^2.10",
     "friendsofphp/php-cs-fixer": "^3.3",
@@ -27,7 +27,10 @@
     "php-parallel-lint/php-parallel-lint": "^1.3",
     "php-parallel-lint/php-console-highlighter": "^0.5",
     "phpstan/phpstan": "^1.2.0",
-    "phpunit/phpunit": "^9"
+    "phpunit/phpunit": "^9",
+    "vimeo/psalm": "^4.12.0",
+    "jetbrains/phpstorm-attributes": "dev-master",
+    "laminas/laminas-coding-standard": "^2.4"
   },
   "autoload": {
     "psr-4": {
