--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,4 @@
-name: Code Quality tests
+name: PHP Composer
 
 on:
   push:
@@ -20,6 +20,7 @@ jobs:
         php-version:
           - "8.0"
           - "8.1"
+          - "8.2"
         operating-system:
           - "ubuntu-latest"
 
@@ -31,10 +32,9 @@ jobs:
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
         with:
+          coverage: "xdebug"
           php-version: "${{ matrix.php-version }}"
           ini-values: memory_limit=-1
-          extensions: mbstring, intl, zip, soap, gd
-          coverage: xdebug #optional, setup coverage driver
           tools: composer:v2
 
       - name: "Cache dependencies"
@@ -48,17 +48,11 @@ jobs:
 
       - name: "Install highest dependencies"
         if: ${{ matrix.dependencies == 'highest' }}
-        run: "composer update --no-interaction --no-progress --no-suggest"
+        run: "composer update --no-interaction --no-progress --no-suggest --ignore-platform-req=php"
 
       - name: "Install locked dependencies"
         if: ${{ matrix.dependencies == 'locked' }}
-        run: "composer install --no-interaction --no-progress --no-suggest"
+        run: "composer install --no-interaction --no-progress --no-suggest --ignore-platform-req=php"
 
       - name: Run Lint Checker suite
         run: composer php-lint
-
-      - name: Run PHP Stan
-        run: composer phpstan
-
-      - name: Run test suite
-        run: composer test
