--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
     "phploc/phploc": "^7.0",
     "php-parallel-lint/php-parallel-lint": "^1.3",
     "php-parallel-lint/php-console-highlighter": "^v1.0.0",
-    "phpstan/phpstan": "^1.7.14",
+    "phpstan/phpstan": "^1.8",
     "phpunit/phpunit": "^9",
-    "vimeo/psalm": "^4.23",
+    "vimeo/psalm": "^4.23 || ^5.0",
     "jetbrains/phpstorm-attributes": "^1.0",
     "laminas/laminas-coding-standard": "^2.3"
   },
