--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,12 @@
     "jetbrains/phpstorm-attributes": "^1.0",
     "laminas/laminas-coding-standard": "^2.3"
   },
+  "config": {
+    "vendor-dir": "vendor",
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
+  },
   "autoload": {
     "psr-4": {
       "Testing\\": "src/"
