--- a/composer.json
+++ b/composer.json
@@ -18,19 +18,19 @@
   ],
   "require": {
     "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
-    "laminas/laminas-test": "^4.0",
+    "laminas/laminas-test": "^4.5",
     "doctrine/orm": "^2.13.3 || ^3.0",
-    "pdepend/pdepend": "^2.10",
-    "friendsofphp/php-cs-fixer": "^3.8",
+    "pdepend/pdepend": "^2.12",
+    "friendsofphp/php-cs-fixer": "^3.13",
     "squizlabs/php_codesniffer": "^3.7",
     "phploc/phploc": "^7.0",
     "php-parallel-lint/php-parallel-lint": "^1.3",
-    "php-parallel-lint/php-console-highlighter": "^v1.0.0",
-    "phpstan/phpstan": "^1.8",
+    "php-parallel-lint/php-console-highlighter": "^1.0",
+    "phpstan/phpstan": "^1.9",
     "phpunit/phpunit": "^9",
-    "vimeo/psalm": "^4.23 || ^5.0",
+    "vimeo/psalm": "^5.1",
     "jetbrains/phpstorm-attributes": "^1.0",
-    "laminas/laminas-coding-standard": "^2.3"
+    "laminas/laminas-coding-standard": "^2.4"
   },
   "config": {
     "vendor-dir": "vendor",
