--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "laminas/laminas-test": "^4.9",
     "doctrine/orm": "^2.14 || ^3.0",
     "pdepend/pdepend": "^2.12",
-    "friendsofphp/php-cs-fixer": "^3.16",
+    "friendsofphp/php-cs-fixer": ">3.14",
     "squizlabs/php_codesniffer": "^3.7",
     "php-parallel-lint/php-parallel-lint": "^1.3",
     "php-parallel-lint/php-console-highlighter": "^1.0",
