--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,15 @@
     "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
     "laminas/laminas-test": "^4.9",
     "doctrine/orm": "^2.14 || ^3.0",
+    "dg/bypass-finals": "^1.4",
     "php-parallel-lint/php-parallel-lint": "^1.3",
     "php-parallel-lint/php-console-highlighter": "^1.0",
     "phpstan/phpstan": "^1.11",
+    "phpstan/phpstan-doctrine": "^1.3",
     "phpunit/phpunit": "^10",
     "vimeo/psalm": "^5.9",
     "jetbrains/phpstorm-attributes": "^1.0",
-    "laminas/laminas-coding-standard": "^2.5"
+    "laminas/laminas-coding-standard": "^2.6"
   },
   "config": {
     "vendor-dir": "vendor",
