--- a/composer.json
+++ b/composer.json
@@ -19,19 +19,18 @@
   "minimum-stability": "dev",
   "require": {
     "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
-    "symfony/finder": "^6.4",
     "laminas/laminas-test": "^4.1",
+    "laminas/laminas-coding-standard": "^2.6",
+    "symfony/finder": "^6.4",
     "doctrine/orm": "^2.14 || ^3.0",
     "dg/bypass-finals": "^1.5",
     "php-parallel-lint/php-parallel-lint": "^1.3",
     "php-parallel-lint/php-console-highlighter": "^1.0",
     "phpstan/phpstan": "^1.11",
     "phpstan/phpstan-doctrine": "^1.4",
-    "phpunit/phpunit": "^10",
     "vimeo/psalm": "^5.9",
     "jetbrains/phpstorm-attributes": "^1.0",
-    "rector/rector": "^1",
-    "laminas/laminas-coding-standard": "^2.6"
+    "rector/rector": "^1"
   },
   "config": {
     "vendor-dir": "vendor",
