--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,17 @@
     }
   ],
   "require": {
-    "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+    "php": "~8.2.0 || ~8.3.0 || ~8.4.0",
     "laminas/laminas-test": "^4.1",
     "symfony/finder": "^6.4",
     "doctrine/orm": "^2.14 || ^3.3",
     "dg/bypass-finals": "^1.8",
     "php-parallel-lint/php-parallel-lint": "^1.3",
     "php-parallel-lint/php-console-highlighter": "^1.0",
-    "phpstan/phpstan": "^1.11",
-    "phpstan/phpstan-doctrine": "^1.4",
-    "vimeo/psalm": "^5.9",
-    "jetbrains/phpstorm-attributes": "^1.1",
+    "phpstan/phpstan": "^1.12",
+    "phpstan/phpstan-doctrine": "^1.5",
+    "vimeo/psalm": "^5.26",
+    "jetbrains/phpstorm-attributes": "^1.2",
     "rector/rector": "^1"
   },
   "config": {
@@ -43,8 +43,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "4.0-dev",
-      "dev-develop": "4.1-dev"
+      "dev-master": "5.0-dev",
+      "dev-develop": "5.1-dev"
     }
   },
   "scripts": {
@@ -57,6 +57,7 @@
       "@cs-fix"
     ],
     "php-lint": "./vendor/bin/parallel-lint src",
+    "phpstan": "./vendor/bin/phpstan analyse src --memory-limit=2G",
     "cs": "./vendor/bin/phpcs",
     "cbf": "./vendor/bin/phpcbf",
     "cs-fix": "./vendor/bin/php-cs-fixer fix -v src",
